tests/NormalTests/paczka1/small_fuzzy/84776212.err
Error in line 1: oXIWlZOOSrb A548 97,4
Error in line 2: oXIWlZOOSrb A941 88,8
Error in line 7: oXIWlZOOSrb A941 8,2
